# django-prod

./: .env  .env.template  Dockerfile  docker-compose.yaml  pyproject.toml
mysite/database/: db.sqlite3
mysite/mysite/: settings.py  urls.py
