[project]
name = "django-prod"
version = "0.1.0"
description = ""
authors = [
    {name = "ZinchJul",email = "zinchenkoy@mail.ru"}
]
packages = [
    {include = "django-prod"}
]
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "django-debug-toolbar (>=5.2.0,<6.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "django-filter (>=25.1,<26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
